--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 -->
 <html>
 	<head>
-		<img src='Jomix-13.github.io/images/profpic.jpg' alt=''/>
-		<title>John Wanis</title>
+		<title>Massively by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -31,7 +30,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Massively</a>
+						<img src='Jomix-13.github.io/images/profpic.jpg' alt=''/>
+						<a href="index.html" class="logo">John Wanis</a>
 					</header>
 
 				<!-- Nav -->
