--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Matt Kufchak | Software Developer</title>
+		<title>John Wanis | Software Developer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -54,11 +54,11 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style5 fullscreen fade-up">
 						<div class="inner">
-							<h1>Matt Kufchak</h1>
+							<h1>John Wanis</h1>
 							<p>Software Engineer</p>
 							<ul class="actions">
 								<li><a href="#about" class="button scrolly">About Me</a></li>
-								<li><a href="/assets/Kufchak_Matt_Resume.pdf" target="_blank" rel="noreferrer" class="button">Résumé</a></li>
+								<li><a href="assets/Wanis_John_Resume.pdf" target="_blank" rel="noreferrer" class="button">Résumé</a></li>
 								<li><a href="#contact" class="button scrolly">Contact Me</a></li>
 							</ul>
 						</div>
@@ -67,13 +67,14 @@
 				<!-- About -->
 					<section id="about" class="wrapper style2 spotlights">
 						<section>
-							<div class="image"><img src="images/bw.jpg" alt="Matt Kufchak" data-position="center right 32%" /></div>
+							<div class="image"><img src="images/progpic.pg.jpg" alt="John Wanis" data-position="center right 32%" /></div>
 							<div class="content">
 								<div class="inner">
 									<h2>About Me</h2>
-									<p>Hi! My name is Matt and I'm a full-stack software engineer with a background in classical music performance. I started playing the cello when I was four years old and I majored in music in college, but tech has always been a big part of my life; both of my parents started their careers in the computer industry in the 1970s, and I grew up around computers and technology.</p>
-									<p>I was lucky enough to play in a professional string quartet for two and a half years, and I gained a passion for web design after building our ensemble's website. I expanded on that experience at KMFA 89.5, Austin's classical music radio station, where one of my main responsibilities was updating and optimizing the website. Most recently, I completed a 1,000+ hour training program at App Academy where I honed my skills in JavaScript, Python, React / Redux, PostgreSQL, and <a href="#technologies" class="scrolly">other tools</a>.</p>
-									<p>Performing concerts and volunteering for music organizations like <a href="https://www.austinsoundwaves.org" target="_blank" rel="noreferrer">Austin Soundwaves</a> is still very important to me, and I pursue my passion for music whenever I can. I'm also an amateur photographer and enjoy learning about art, design, and world history (especially the Middle East). I love trying craft beverages of all varieties, and I always try to find a local brew when I travel. I also like to cook and bake with my wife Bailey, and we adopted an adorable dog named Mikey.</p>
+									<p>Hi! My name is John and I'm a full-stack software engineer with a background accounting and finance. On 2006 I got my bachelor in accounting and finance .</p>
+									<p>Since highschool I really love solving problems, I used to do small excel programs using functions and built in tools. I have a bachelor's in accounting and finance. I also jumped in six different careers in my 15 years of experience, but I always was inspired by my friends who are developers.</p>
+									<p>Over the last six months I have been sharpening my skills and completed a 1,000+ hour training program at App Academy where I honed my skills in JavaScript, Python, React / Redux, PostgreSQL, and <a href="#technologies" class="scrolly">other tools</a>.</p>
+									<!-- <p>Performing concerts and volunteering for music organizations like <a href="https://www.austinsoundwaves.org" target="_blank" rel="noreferrer">Austin Soundwaves</a> is still very important to me, and I pursue my passion for music whenever I can. I'm also an amateur photographer and enjoy learning about art, design, and world history (especially the Middle East). I love trying craft beverages of all varieties, and I always try to find a local brew when I travel. I also like to cook and bake with my wife Bailey, and we adopted an adorable dog named Mikey.</p> -->
 									<ul class="actions">
 										<li><a href="#projects" class="scrolly arrow">scroll <i class="fas fa-angle-double-down"></i></a></li>
 									</ul>
@@ -144,7 +145,7 @@
 									<li class="tech-list--item"><div><img src="images/sqla.svg">SQLAlchemy</div></li>
 									<li class="tech-list--item"><div><img src="images/express-js.svg">Express</div></li>
 									<li class="tech-list--item"><div><img src="images/flask.svg">Flask</div></li>
-									<li class="tech-list--item"><div><span class="icon brands fa-aws fa-3x"></span>AWS S3</div></li>
+									<!-- <li class="tech-list--item"><div><span class="icon brands fa-aws fa-3x"></span>AWS S3</div></li> -->
 									<li class="tech-list--item"><div><img src="images/heroku.svg">Heroku</div></li>
 									<li class="tech-list--item"><div><span class="icon brands fa-docker fa-3x"></span>Docker</div></li>
 									<li class="tech-list--item"><div><span class="icon brands fa-google fa-3x"></span>Google Maps API</div></li>
