--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 							<div class="content">
 								<div class="inner">
 									<h2>About Me</h2>
-									<p>Hi! My name is John and I'm a full-stack software engineer with a background accounting and finance. On 2006 I got my bachelor in accounting and finance .</p>
-									<p>Since highschool I really love solving problems, I used to do small excel programs using functions and built in tools. I have a bachelor's in accounting and finance. I also jumped in six different careers in my 15 years of experience, but I always was inspired by my friends who are developers.</p>
-									<p>Over the last six months I have been sharpening my skills and completed a 1,000+ hour training program at App Academy where I honed my skills in JavaScript, Python, React / Redux, PostgreSQL, and <a href="#technologies" class="scrolly">other tools</a>.</p>
+									<p>Hi! My name is John and I'm a full-stack software engineer with a background accounting and finance. On 2006 I got my bachelor in accounting and finance.</p>
+									<p>Since highschool I really love solving problems, I used to do excel programs using functions and built in tools.I visited four different successful careers in my 15 years of experience, but I always was inspired by my friends who are developers.</p>
+									<p>Over the last six months I followed my passion and completed a 1,000+ hour training program at App Academy where I honed my skills in JavaScript, Python, React / Redux, PostgreSQL, and <a href="#technologies" class="scrolly">other tools</a>.</p>
 									<!-- <p>Performing concerts and volunteering for music organizations like <a href="https://www.austinsoundwaves.org" target="_blank" rel="noreferrer">Austin Soundwaves</a> is still very important to me, and I pursue my passion for music whenever I can. I'm also an amateur photographer and enjoy learning about art, design, and world history (especially the Middle East). I love trying craft beverages of all varieties, and I always try to find a local brew when I travel. I also like to cook and bake with my wife Bailey, and we adopted an adorable dog named Mikey.</p> -->
 									<ul class="actions">
 										<li><a href="#projects" class="scrolly arrow">scroll <i class="fas fa-angle-double-down"></i></a></li>
@@ -90,33 +90,33 @@
 							<p>Check out these full-stack projects that I've worked on!</p>
 							<div class="features">
 								<section>
-									<span ><a href="https://soundpost.herokuapp.com/"target="_blank" rel="noreferrer"><img class="icon solid major" src="images/icon.svg" alt="soundpost icon"></a></span>
-									<h3>Soundpost</h3>
-									<p>Soundpost is an app for music students and teachers to schedule lessons, track practice statistics, and access practice assignments all in one place.</p>
+									<span ><a href="https://gotahome.herokuapp.com/"target="_blank" rel="noreferrer"><img class="icon solid major" src="images/logo.jpg" alt="soundpost icon"></a></span>
+									<h3>got a home</h3>
+									<p>“Got a Home” is a full stack application that helps people list their own homes for sale/rent or families who are looking to buy/rent a home.</p>
 									<!-- <div class="project-img"><img src="images/soundpost_home.png" alt="soundpost homepage"/></div> -->
-									<div class="project-links"><a href="https://github.com/cellomatt/soundpost"target="_blank" rel="noreferrer">github repo</a> | <a href="https://soundpost.herokuapp.com/"target="_blank" rel="noreferrer">live site</a></div>
+									<div class="project-links"><a href="https://github.com/Jomix-13/Got-a-Home"target="_blank" rel="noreferrer">github repo</a> | <a href="https://gotahome.herokuapp.com/"target="_blank" rel="noreferrer">live site</a></div>
 								</section>
 								<section>
-									<span ><a href="https://musiconimbus.herokuapp.com/"target="_blank" rel="noreferrer"><img class="icon solid major" src="images/musiconimbus-icon.svg" alt="musiconimbus icon"></a></span>
-									<h3>MusicoNimbus</h3>
-									<p>Like SoundCloud, but with a classical music twist. MusicoNimbus is a place for classical musicians to upload, share, and listen to great music.</p>
+									<span ><a href="https://sidewalk-surfers.herokuapp.com/"target="_blank" rel="noreferrer"><img class="icon solid major" src="images/Surf.png" alt="musiconimbus icon"></a></span>
+									<h3>sidewalk-surfers</h3>
+									<p>"sidewalk-surfers" is a clone of yelp/instagram people can add and browes surfing spots, add media (photo/video) page with thier ecperiance and comments too  .</p>
 									<!-- <div class="project-img"><img src="images/musiconimbus_home.png" alt="musiconimbus homepage"/></div> -->
-									<div class="project-links"><a href="https://github.com/cellomatt/musiconimbus"target="_blank" rel="noreferrer">github repo</a> | <a href="https://musiconimbus.herokuapp.com/"target="_blank" rel="noreferrer">live site</a></div>
+									<div class="project-links"><a href="https://github.com/owiwamasa/sidewalk-surfer-proj"target="_blank" rel="noreferrer">github repo</a> | <a href="https://sidewalk-surfers.herokuapp.com/"target="_blank" rel="noreferrer">live site</a></div>
 								</section>
-								<section>
+								<!-- <section>
 									<span ><a href="https://aurora-quora.herokuapp.com/"target="_blank" rel="noreferrer"><img class="icon solid major" src="images/aurora-icon.svg" alt="aurora icon"></a></span>
-									<h3>Aurora</h3>
-									<p>A clone of Quora with an added "ranking" of questions by expertise level.</p>
+									<h3>Aurora</h3> -->
+									<!-- <p>A clone of Quora with an added "ranking" of questions by expertise level.</p> -->
 									<!-- <div class="project-img"><img src="images/aurora.png" alt="aurora homepage"/></div> -->
-									<div class="project-links"><a href="https://github.com/cellomatt/aurora"target="_blank" rel="noreferrer">github repo</a> | <a href="http://aurora-quora.herokuapp.com/"target="_blank" rel="noreferrer">live site</a></div>
+									<!-- <div class="project-links"><a href="https://github.com/cellomatt/aurora"target="_blank" rel="noreferrer">github repo</a> | <a href="http://aurora-quora.herokuapp.com/"target="_blank" rel="noreferrer">live site</a></div>
 								</section>
 								<section>
 									<span ><a href="https://artizen.herokuapp.com/"target="_blank" rel="noreferrer"><img class="icon solid major" src="images/artizen_icon_circle.svg" alt="artizen icon"></a></span>
-									<h3>Artizen</h3>
-									<p>Artizen is a public-art-focused take on MapMyRun, where users can upload art locations and create walking routes to explore them.</p>
+									<h3>Artizen</h3> -->
+									<!-- <p>Artizen is a public-art-focused take on MapMyRun, where users can upload art locations and create walking routes to explore them.</p> -->
 									<!-- <div class="project-img"><img src="images/artizen_home.png" alt="artizen homepage"/></div> -->
-									<div class="project-links"><a href="https://github.com/andrewscohen/Artizen"target="_blank" rel="noreferrer">github repo</a> | <a href="https://artizen.herokuapp.com/"target="_blank" rel="noreferrer">live site</a></div>
-								</section>
+									<!-- <div class="project-links"><a href="https://github.com/andrewscohen/Artizen"target="_blank" rel="noreferrer">github repo</a> | <a href="https://artizen.herokuapp.com/"target="_blank" rel="noreferrer">live site</a></div>
+								</section> -->
 							</div>
 							<ul class="actions">
 								<li><a href="#technologies" class="scrolly arrow">scroll <i class="fas fa-angle-double-down"></i></a></li>
@@ -207,21 +207,21 @@
 										</li> -->
 										<li>
 											<h3>Email</h3>
-											<a href="mailto:matt.kufchak@gmail.com">matt.kufchak@gmail.com</a>
+											<a href="mailto:john.wanis@yahoo.com">john.wanis@yahoo.com</a>
 										</li>
 										<li>
 											<h3>Phone</h3>
-											<span><a href="tel:6143019973">614.301.9973</a></span>
+											<span><a href="tel:5038422882">(503)841-2882</a></span>
 										</li>
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
 												<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
 												<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
-												<li><a href="https://github.com/cellomatt" target="_blank" rel="noreferrer" class="icon brands fa-github fa-2x"><span class="label">GitHub</span></a></li>
+												<li><a href="https://github.com/Jomix-13" target="_blank" rel="noreferrer" class="icon brands fa-github fa-2x"><span class="label">GitHub</span></a></li>
 												<!-- <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
-												<li><a href="https://www.linkedin.com/in/mattkufchak/" target="_blank" rel="noreferrer" class="icon brands fa-linkedin-in fa-2x"><span class="label">LinkedIn</span></a></li>
-												<li><a href="https://angel.co/u/matt-kufchak" target="_blank" rel="noreferrer" class="icon brands fa-angellist fa-2x"><span class="label">AngelList</span></a></li>
+												<li><a href="https://www.linkedin.com/in/john-wanis-764957138/" target="_blank" rel="noreferrer" class="icon brands fa-linkedin-in fa-2x"><span class="label">LinkedIn</span></a></li>
+												<li><a href="https://angel.co/u/john-wanis-1" target="_blank" rel="noreferrer" class="icon brands fa-angellist fa-2x"><span class="label">AngelList</span></a></li>
 											</ul>
 										</li>
 									</ul>
@@ -236,7 +236,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; 2021 Matt Kufchak. All rights reserved.</li><li>Design: <a href="http://html5up.net" target="_blank" rel="noreferrer">HTML5 UP</a></li>
+						<li>&copy; 2021 John Wanis. All rights reserved.</li><li>Design: <a href="http://html5up.net" target="_blank" rel="noreferrer">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
