--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
 							<p>Check out these full-stack projects that I've worked on!</p>
 							<div class="features">
 								<section>
-									<span ><a href="https://gotahome.herokuapp.com/"target="_blank" rel="noreferrer"><img class="icon solid major" src="images/logo.jpg" alt="soundpost icon"></a></span>
+									<span ><a href="https://gotahome.herokuapp.com/"target="_blank" rel="noreferrer"><img class="icon solid major" src="https://i.imgur.com/XnVIh8T.png" alt=""></a></span>
 									<h3>got a home</h3>
 									<p>“Got a Home” is a full stack application that helps people list their own homes for sale/rent or families who are looking to buy/rent a home.</p>
 									<!-- <div class="project-img"><img src="images/soundpost_home.png" alt="soundpost homepage"/></div> -->
 									<div class="project-links"><a href="https://github.com/Jomix-13/Got-a-Home"target="_blank" rel="noreferrer">github repo</a> | <a href="https://gotahome.herokuapp.com/"target="_blank" rel="noreferrer">live site</a></div>
 								</section>
 								<section>
-									<span ><a href="https://sidewalk-surfers.herokuapp.com/"target="_blank" rel="noreferrer"><img class="icon solid major" src="images/Surf.png" alt="musiconimbus icon"></a></span>
+									<span ><a href="https://sidewalk-surfers.herokuapp.com/"target="_blank" rel="noreferrer"><img class="icon solid major" src="images/Surf.png" alt=""></a></span>
 									<h3>sidewalk-surfers</h3>
 									<p>"sidewalk-surfers" is a clone of yelp/instagram people can add and browes surfing spots, add media (photo/video) page with thier ecperiance and comments too  .</p>
 									<!-- <div class="project-img"><img src="images/musiconimbus_home.png" alt="musiconimbus homepage"/></div> -->
