--- a/index.html
+++ b/index.html
@@ -103,6 +103,13 @@
 									<!-- <div class="project-img"><img src="images/musiconimbus_home.png" alt="musiconimbus homepage"/></div> -->
 									<div class="project-links"><a href="https://github.com/owiwamasa/sidewalk-surfer-proj"target="_blank" rel="noreferrer">github repo</a> | <a href="https://sidewalk-surfers.herokuapp.com/"target="_blank" rel="noreferrer">live site</a></div>
 								</section>
+								<section>
+									<span ><a href="https://jovero.herokuapp.com/"target="_blank" rel="noreferrer"><img class="icon solid major" src="https://i.imgur.com/UJqURT9.png" alt=""></a></span>
+									<h3>jovero</h3>
+									<p>"jovero" is a clone of yelp people can add thier own businesses, add comments and browes other businesses  .</p>
+									<!-- <div class="project-img"><img src="images/musiconimbus_home.png" alt="musiconimbus homepage"/></div> -->
+									<div class="project-links"><a href="https://github.com/Jomix-13/jovero"target="_blank" rel="noreferrer">github repo</a> | <a href="https://sidewalk-surfers.herokuapp.com/"target="_blank" rel="noreferrer">live site</a></div>
+								</section>
 								<!-- <section>
 									<span ><a href="https://aurora-quora.herokuapp.com/"target="_blank" rel="noreferrer"><img class="icon solid major" src="images/aurora-icon.svg" alt="aurora icon"></a></span>
 									<h3>Aurora</h3> -->
