--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 								<section>
 									<span ><a href="https://jovero.herokuapp.com/"target="_blank" rel="noreferrer"><img class="icon solid major" src="https://i.imgur.com/UJqURT9.png" alt=""></a></span>
 									<h3>jovero</h3>
-									<p>"jovero" is a clone of yelp people can add thier own businesses, add comments and browes other businesses  .</p>
+									<p>"jovero" is a clone of yelp people can add thier own business, add comments and broweses other businesses  .</p>
 									<!-- <div class="project-img"><img src="images/musiconimbus_home.png" alt="musiconimbus homepage"/></div> -->
 									<div class="project-links"><a href="https://github.com/Jomix-13/jovero"target="_blank" rel="noreferrer">github repo</a> | <a href="https://sidewalk-surfers.herokuapp.com/"target="_blank" rel="noreferrer">live site</a></div>
 								</section>
