--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" href="./images/fav.ico" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-C1E3HT9S6X"></script>
 		<script>
 			window.dataLayer = window.dataLayer || [];
@@ -74,7 +73,6 @@
 									<p>Hi! My name is John and I'm a full-stack software engineer with a background accounting and finance. On 2006 I got my bachelor in accounting and finance.</p>
 									<p>Since highschool I really love solving problems, I used to do excel programs using functions and built in tools.I visited four different successful careers in my 15 years of experience, but I always was inspired by my friends who are developers.</p>
 									<p>Over the last six months I followed my passion and completed a 1,000+ hour training program at App Academy where I honed my skills in JavaScript, Python, React / Redux, PostgreSQL, and <a href="#technologies" class="scrolly">other tools</a>.</p>
-									<!-- <p>Performing concerts and volunteering for music organizations like <a href="https://www.austinsoundwaves.org" target="_blank" rel="noreferrer">Austin Soundwaves</a> is still very important to me, and I pursue my passion for music whenever I can. I'm also an amateur photographer and enjoy learning about art, design, and world history (especially the Middle East). I love trying craft beverages of all varieties, and I always try to find a local brew when I travel. I also like to cook and bake with my wife Bailey, and we adopted an adorable dog named Mikey.</p> -->
 									<ul class="actions">
 										<li><a href="#projects" class="scrolly arrow">scroll <i class="fas fa-angle-double-down"></i></a></li>
 									</ul>
@@ -91,39 +89,22 @@
 							<div class="features">
 								<section>
 									<span ><a href="https://gotahome.herokuapp.com/"target="_blank" rel="noreferrer"><img class="icon solid major" src="https://i.imgur.com/XnVIh8T.png" alt=""></a></span>
-									<h3>got a home</h3>
-									<p>“Got a Home” is a full stack application that helps people list their own homes for sale/rent or families who are looking to buy/rent a home.</p>
-									<!-- <div class="project-img"><img src="images/soundpost_home.png" alt="soundpost homepage"/></div> -->
-									<div class="project-links"><a href="https://github.com/Jomix-13/Got-a-Home"target="_blank" rel="noreferrer">github repo</a> | <a href="https://gotahome.herokuapp.com/"target="_blank" rel="noreferrer">live site</a></div>
+									<h3>gota a home</h3>
+									<p>“got a Home” is a full-stack application that helps people list their own homes for sale/rent or families who are looking to buy/rent a home.</p>
+									<div class="project-links"><a href="https://github.com/Jomix-13/Got-a-Home"target="_blank" rel="noreferrer">github repo</a> | <a href="https://gotahome.herokuapp.com/"target="_blank" rel="noreferrer">live site</a></div> | <a href="https://youtu.be/n0ZUd3wJOq4"target="_blank" rel="noreferrer">Demo</a></div>
 								</section>
 								<section>
 									<span ><a href="https://sidewalk-surfers.herokuapp.com/"target="_blank" rel="noreferrer"><img class="icon solid major" src="images/Surf.png" alt=""></a></span>
 									<h3>sidewalk-surfers</h3>
-									<p>"sidewalk-surfers" is a clone of yelp/instagram people can add and browes surfing spots, add media (photo/video) page with thier ecperiance and comments too  .</p>
-									<!-- <div class="project-img"><img src="images/musiconimbus_home.png" alt="musiconimbus homepage"/></div> -->
+									<p>"sidewalk-surfers" is a clone of yelp/Instagram people can add and browse surfing spots, add media (photo/video) pages with their experience and comments too.</p>
 									<div class="project-links"><a href="https://github.com/owiwamasa/sidewalk-surfer-proj"target="_blank" rel="noreferrer">github repo</a> | <a href="https://sidewalk-surfers.herokuapp.com/"target="_blank" rel="noreferrer">live site</a></div>
 								</section>
 								<section>
 									<span ><a href="https://jovero.herokuapp.com/"target="_blank" rel="noreferrer"><img class="icon solid major" src="https://i.imgur.com/UJqURT9.png" alt=""></a></span>
 									<h3>jovero</h3>
-									<p>"jovero" is a clone of yelp people can add thier own business, add comments and broweses other businesses  .</p>
-									<!-- <div class="project-img"><img src="images/musiconimbus_home.png" alt="musiconimbus homepage"/></div> -->
+									<p>"jovero" is a clone of yelp people can add their own business, add comments, and browse other businesses.</p>
 									<div class="project-links"><a href="https://github.com/Jomix-13/jovero"target="_blank" rel="noreferrer">github repo</a> | <a href="https://sidewalk-surfers.herokuapp.com/"target="_blank" rel="noreferrer">live site</a></div>
 								</section>
-								<!-- <section>
-									<span ><a href="https://aurora-quora.herokuapp.com/"target="_blank" rel="noreferrer"><img class="icon solid major" src="images/aurora-icon.svg" alt="aurora icon"></a></span>
-									<h3>Aurora</h3> -->
-									<!-- <p>A clone of Quora with an added "ranking" of questions by expertise level.</p> -->
-									<!-- <div class="project-img"><img src="images/aurora.png" alt="aurora homepage"/></div> -->
-									<!-- <div class="project-links"><a href="https://github.com/cellomatt/aurora"target="_blank" rel="noreferrer">github repo</a> | <a href="http://aurora-quora.herokuapp.com/"target="_blank" rel="noreferrer">live site</a></div>
-								</section>
-								<section>
-									<span ><a href="https://artizen.herokuapp.com/"target="_blank" rel="noreferrer"><img class="icon solid major" src="images/artizen_icon_circle.svg" alt="artizen icon"></a></span>
-									<h3>Artizen</h3> -->
-									<!-- <p>Artizen is a public-art-focused take on MapMyRun, where users can upload art locations and create walking routes to explore them.</p> -->
-									<!-- <div class="project-img"><img src="images/artizen_home.png" alt="artizen homepage"/></div> -->
-									<!-- <div class="project-links"><a href="https://github.com/andrewscohen/Artizen"target="_blank" rel="noreferrer">github repo</a> | <a href="https://artizen.herokuapp.com/"target="_blank" rel="noreferrer">live site</a></div>
-								</section> -->
 							</div>
 							<ul class="actions">
 								<li><a href="#technologies" class="scrolly arrow">scroll <i class="fas fa-angle-double-down"></i></a></li>
@@ -152,7 +133,6 @@
 									<li class="tech-list--item"><div><img src="images/sqla.svg">SQLAlchemy</div></li>
 									<li class="tech-list--item"><div><img src="images/express-js.svg">Express</div></li>
 									<li class="tech-list--item"><div><img src="images/flask.svg">Flask</div></li>
-									<!-- <li class="tech-list--item"><div><span class="icon brands fa-aws fa-3x"></span>AWS S3</div></li> -->
 									<li class="tech-list--item"><div><img src="images/heroku.svg">Heroku</div></li>
 									<li class="tech-list--item"><div><span class="icon brands fa-docker fa-3x"></span>Docker</div></li>
 									<li class="tech-list--item"><div><span class="icon brands fa-google fa-3x"></span>Google Maps API</div></li>
@@ -170,7 +150,6 @@
 								<p>Click the button to view a PDF of my résumé.</p>
 								<ul class="actions">
 									<li><a href="assets/Wanis_John_Resume.pdf" target="_blank" rel="noreferrer" class="button">Résumé</a></li>
-									<!-- <li><a href="#contact" class="scrolly arrow"><i class="fas fa-angle-double-down"></i></a></li> -->
 								</ul>
 							</div>
 				</section>
@@ -180,38 +159,8 @@
 						<div class="inner">
 							<h2>Get In Touch</h2>
 							<p>If you have any questions about me or my projects, I would love to hear from you!</p>
-							<!-- <div class="split style1">
-								<section>
-									<form
-										action="https://getform.io/f/90bf72e3-4a7f-4fff-b0b6-9680097a90ff"
-										method="POST"
-									>
-										<div class="fields">
-											<div class="field half">
-												<label for="name">Name</label>
-												<input type="text" name="name" id="name" required />
-											</div>
-											<div class="field half">
-												<label for="email">Email Address</label>
-												<input type="text" name="email" id="email" required />
-											</div>
-											<div class="field">
-												<label for="message">Message</label>
-												<textarea name="message" id="message" rows="5" required></textarea>
-											</div>
-										</div>
-										<ul class="actions">
-											<li><button type="submit" value="Submit" class="button submit">Send Message</button></li>
-										</ul>
-									</form>
-								</section> -->
 								<section>
 									<ul class="contact">
-										<!-- <li>
-											<h3>Address</h3>
-											<span>St. Louis, MO 63130<br />
-											USA</span>
-										</li> -->
 										<li>
 											<h3>Email</h3>
 											<a href="mailto:john.wanis@yahoo.com">john.wanis@yahoo.com</a>
@@ -223,10 +172,7 @@
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
-												<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
-												<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
 												<li><a href="https://github.com/Jomix-13" target="_blank" rel="noreferrer" class="icon brands fa-github fa-2x"><span class="label">GitHub</span></a></li>
-												<!-- <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
 												<li><a href="https://www.linkedin.com/in/john-wanis-764957138/" target="_blank" rel="noreferrer" class="icon brands fa-linkedin-in fa-2x"><span class="label">LinkedIn</span></a></li>
 												<li><a href="https://angel.co/u/john-wanis-1" target="_blank" rel="noreferrer" class="icon brands fa-angellist fa-2x"><span class="label">AngelList</span></a></li>
 											</ul>
