--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 							<div class="content">
 								<div class="inner">
 									<h2>About Me</h2>
-									<p>Hi! My name is John and I'm a full-stack software engineer with a background accounting and finance. On 2006 I got my bachelor in accounting and finance.</p>
-									<p>Since highschool I really love solving problems, I used to do excel programs using functions and built in tools.I visited four different successful careers in my 15 years of experience, but I always was inspired by my friends who are developers.</p>
-									<p>Over the last six months I followed my passion and completed a 1,000+ hour training program at App Academy where I honed my skills in JavaScript, Python, React / Redux, PostgreSQL, and <a href="#technologies" class="scrolly">other tools</a>.</p>
+									<p>Hi! My name is John and I'm a full-stack software engineer with a background in accounting and finance. In 2006 I got my bachelor's in accounting and finance.</p>
+									<p>Since high school I really loved solving problems, I used to do excel programs using functions and built-in tools. I visited four different successful careers in my 15 years of experience, but I always was inspired by my friends who are developers.</p>
+									<p>Over the last six months, I followed my passion and completed a 1,000+ hour training program at App Academy where I honed my skills in JavaScript, Python, React / Redux, PostgreSQL, and <a href="#technologies" class="scrolly">other tools</a>.</p>
 									<ul class="actions">
 										<li><a href="#projects" class="scrolly arrow">scroll <i class="fas fa-angle-double-down"></i></a></li>
 									</ul>
