--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 						<ul>
 							<li><a href="#intro">Home</a></li>
 							<li><a href="#about">About</a></li>
+							<li><a href="#Experiance">Experiance</a></li>
 							<li><a href="#projects">Projects</a></li>
 							<li><a href="#technologies">Technologies</a></li>
 							<li><a href="#resume">Résumé</a></li>
@@ -83,6 +84,46 @@
 						</section>
 					</section>
 
+				<!-- Projects -->
+					<section id="Experiance" class="wrapper style4 fade-up">
+						<div class="inner">
+							<h2>Experiance</h2>
+							<!-- <p>Check out these full-stack projects that I've worked on!</p> -->
+							<div class="features2">
+								<section>
+									<span ><a target="_blank" rel="noreferrer"><img class="icon solid major" src="images/AMMECO.jpeg" alt=""></a></span>
+									<h3>AMMECO</h3>
+									<h4>Front-end Developer</h4>
+									<li>
+										Participate in the initial wave of developers utilizing ReactJS library to create application frontend
+									</li>
+									<li>
+										Test, debug, and ship 10s of 1000s of lines of code to various development teams.
+									</li>
+										Introduced Kanban Board style ticketing system to promote highly efficient asynchronous and synchronous work, increasing efficiency by 12%.
+									</li>
+									<li>
+										Utilize HTML, CSS, and JavaScript to create responsive landing pages for both company and client.
+									</li>
+									<li>
+										Maintain graphic standards and branding throughout the product's interfaces.
+									<li>
+										Work in an agile environment with weekly stand-ups, keep track of user stories/bugs in GitLab projects, and conduct 2 hours of sprint planning and sprint retrospectives per week.
+									<li>
+									</li>
+										Pair programmed with 3 engineers, and review the team's code to provide additional perspective and catch previously missed errors.
+
+									</li>
+									<!-- <div class="project-img"><img src="images/soundpost_home.png" alt="soundpost homepage"/></div> -->
+									<!-- <div class="project-links"><a href="https://github.com/Jomix-13/Got-a-Home"target="_blank" rel="noreferrer">github repo</a> | <a href="https://gotahome.herokuapp.com/"target="_blank" rel="noreferrer">live site</a></div> -->
+								</section>
+								
+							</div>
+							<ul class="actions">
+								<li><a href="#technologies" class="scrolly arrow">scroll <i class="fas fa-angle-double-down"></i></a></li>
+							</ul>
+						</div>
+					</section>
 				<!-- Projects -->
 					<section id="projects" class="wrapper style4 fade-up">
 						<div class="inner">
