--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<ul>
 							<li><a href="#intro">Home</a></li>
 							<li><a href="#about">About</a></li>
-							<li><a href="#Experiance">Experiance</a></li>
+							<li><a href="#Experience">Experience</a></li>
 							<li><a href="#projects">Projects</a></li>
 							<li><a href="#technologies">Technologies</a></li>
 							<li><a href="#resume">Résumé</a></li>
@@ -85,7 +85,7 @@
 					</section>
 
 				<!-- Projects -->
-					<section id="Experiance" class="wrapper style4 fade-up">
+					<section id="Experience" class="wrapper style4 fade-up">
 						<div class="inner">
 							<h2>Experiance</h2>
 							<!-- <p>Check out these full-stack projects that I've worked on!</p> -->
